openshift-configs/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pizza-order-delivery-ui
spec:
  port:
    targetPort: 8081
  to:
    kind: Service
    name: pizza-order-delivery-ui
